# caja

./: .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROPERTIES_IA.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  BACKLOG.md  figma-tokens-analysis.md
e2e/: canvas.spec.ts  editor.spec.ts  helpers.ts
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ErrorBoundary.tsx  UpdateModal.tsx  WelcomeModal.tsx
src/components/Canvas/: Canvas.tsx  CanvasContextMenu.tsx  CanvasHints.tsx  CanvasIframe.tsx  CanvasInline.tsx  FrameRenderer.css  FrameRenderer.tsx  GoogleFontsLoader.tsx  InsertBar.tsx  ResponsiveBar.tsx  Toolbar.tsx  (+3 more)
src/data/: colors.ts  playground.caja  scales.ts  tailwindClasses.ts
src/lib/: assetOps.ts  fileOps.ts  libraryOps.ts  unsavedDialog.ts  updater.ts
src/mcp/: batchRefs.ts  bridge.ts  resources.ts  sanitize.ts  schema.ts  server.mjs  tools.ts
src/store/: catalogStore.ts  frameFactories.ts  frameMigration.ts  frameStore.ts  hoverStore.ts  selectionHistory.ts  snippetStore.ts  treeHelpers.ts
src/types/: component.ts  frame.ts  pattern.ts  snippet.ts
src/utils/: canvasDrop.ts  componentResolver.ts  exportHtml.ts  exportShared.ts  exportTailwind.ts  frameToClasses.ts  frameToPreviewStyle.ts  googleFonts.ts  parseTailwindClasses.ts  responsiveClasses.ts
(+118 files in other folders)
