[package]
name = "Caja"
version = "0.1.0"
description = "Visual Flexbox layout builder"
authors = []
edition = "2021"

[lib]
name = "caja_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
axum = "0.7"
tokio = { version = "1", features = ["sync", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-window-state = "2"
tauri-plugin-http = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
